<resources>
    <string name="app_name">SampleApp</string>
    <string name="welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="List_fragment_label">List Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_age">Sort by Age</string>
    <string name="sort_by_city">Sort by City</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="register_label">Not a member? Sign up now.</string>
    <string name="login_label">Already registred! Login Me.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_user">Add user</string>
    <string name="user_name">User Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
</resources>