<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.userapp.viewmodel.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_login"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/bg_view"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/username"
                    app:errorEnabled="true"
                    errorText="@{viewModel.usernameError}"
                    app:layout_constraintTop_toBottomOf="@id/loginText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:text="@={viewModel.userName}"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:errorEnabled="true"
                    errorText="@{viewModel.passwordError}"
                    app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    android:onClick="@{()->viewModel.performValidation()}"
                    android:text="@string/login"
                    android:textSize="18sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRedirectUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal"
                    android:onClick="@{()->viewModel.navigateToReqScreen()}"
                    app:layout_constraintEnd_toEndOf="@id/loginButton"
                    app:layout_constraintStart_toStartOf="@id/loginButton"
                    app:layout_constraintTop_toBottomOf="@id/loginButton"
                    android:text="@string/register_label"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
